--- a/maps.html
+++ b/maps.html
@@ -72,7 +72,7 @@
 
 			<!-- 모텔, 호텔 히트맵 -->
 			<div style="width:32%;height:400px; display: inline-block; float:left; text-align:center;">
-				<div style="width:400px;height:30px; display: inline-block;  text-align:center;"><b>Hotel(Motel for Daegu) Heatmap</b></div>
+				<div style="width:400px;height:30px; display: inline-block;  text-align:center;"><b>Hotel Heatmap</b></div>
 				<div id="map3" style="width:400px;height:400px; display: inline-block; "></div>	
 				<div > <a> total:</a> <a id="total3"> 0</a></div>
 			</div>		
