--- a/maps.html
+++ b/maps.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>Busan, Daegu Heatmap</title>
     <!-- <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pksoi6244u"></script> -->
-    <script src="./maps.js"></script>
+    <script src="https://sjkr012.github.io/kitchen_bd/maps.js"></script>
     <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pksoi6244u&submodules=visualization,geocoder"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
